<resources>
    <string name="app_name">Tenakata University</string>
    <string name="apply">Apply</string>
    <string name="admission_results">Admission Results</string>
    <string name="name_hint">Enter your name here</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="age_hint">Enter your age here</string>
    <string name="height">Height</string>
    <string name="height_hint">Enter your height in centimeters</string>
    <string name="iq_test_results">IQ Test Results</string>
    <string name="iq_test_results_hint">Enter your IQ test results here</string>
    <string name="enter_application_details">Enter Application Details</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="marital_status">Marital Status</string>
    <string name="single">Single</string>
    <string name="married">Married</string>
    <string name="name_error">Name is required</string>
    <string name="age_error">Age is required</string>
    <string name="age_invalid_error">Age is invalid</string>
    <string name="gender_error">Please select your gender</string>
    <string name="marital_status_error">Please select your marital status</string>
    <string name="height_error">Height is required</string>
    <string name="height_invalid_error">Height is invalid</string>
    <string name="iq_test_results_error">IQ test results are required</string>
    <string name="iq_test_results_invalid_error">An IQ of at least 100 is required</string>
    <string name="submit">Submit</string>
    <string name="capture_your_profile_picture">Capture your profile picture</string>
    <string name="camera_error">\"The app cannot access the camera in your device\"</string>
    <string name="camera_permission_rationale">The app requires the permission to capture the picture</string>
    <string name="location_permission_rationale">Grant the location permission for the app to detect your location</string>
    <string name="camera_permission_request">Camera Permission Request</string>
    <string name="done">Done</string>
    <string name="location_permission_request">Location Permission Request</string>
    <string name="country">Country</string>
    <string name="admissibility_score">Admissibility Score</string>
    <string name="admission_list">Admission List</string>
    <string name="picture_error">Picture is required</string>
    <string name="country_error">Only students from Kenya are eligible to apply</string>
</resources>