<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".application.apply.Apply">

    <data>

        <variable
            name="viewModel"
            type="com.tenakatauniversity.apply.ApplyViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/picture_image_view"
                    android:layout_width="@dimen/apply_profile_picture_image_view_dimens"
                    android:layout_height="@dimen/apply_profile_picture_image_view_dimens"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/apply_minor_top_margin"
                    android:contentDescription="@string/profile_picture"
                    android:src="@drawable/ic_baseline_person_24"
                    app:civ_border_color="#F2F2F2"
                    app:civ_border_width="2dp"
                    android:onClick="@{()->viewModel.takePicture()}"
                    />

                <TextView
                    android:id="@+id/name_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/apply_major_top_margin"
                    android:text="@string/name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_hint"
                        android:inputType="textPersonName" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/age_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/apply_major_top_margin"
                    android:text="@string/age"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/age_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/apply_minor_top_margin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/age_hint"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/gender_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/apply_major_top_margin"
                    android:text="@string/gender"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <RadioGroup
                    android:id="@+id/gender_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/apply_minor_top_margin"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/male_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/female_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/female" />

                </RadioGroup>

                <TextView
                    android:id="@+id/marital_status_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/apply_major_top_margin"
                    android:text="@string/marital_status"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <RadioGroup
                    android:id="@+id/marital_status_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/apply_minor_top_margin"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/single_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/single" />

                    <RadioButton
                        android:id="@+id/married_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/married" />

                </RadioGroup>

                <TextView
                    android:id="@+id/height_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/apply_major_top_margin"
                    android:text="@string/height"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/height_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/apply_minor_top_margin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/height_hint"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/iq_test_results_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/apply_major_top_margin"
                    android:text="@string/iq_test_results"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/iq_test_results_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/apply_minor_top_margin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/iq_test_results_hint"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/apply_submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:onClick="@{()->viewModel.validate()}"
                    android:layout_gravity="bottom|end"
                    android:paddingHorizontal="60dp"
                    android:paddingVertical="15dp"
                    android:layout_marginTop="@dimen/apply_major_top_margin"
                    />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
